syntax = "proto3";

package bmigo.micro;

message RequestEnvelope {
    string service_method = 1;
    fixed64 seq = 2;
}

message ResponseEnvelope {
    string service_method = 1;
    fixed64 seq = 2;
    string error = 3;
}

message Request {
    string name = 1;
}

message Response {
    string msg = 1;
}

service Kittens {
    rpc Hello(Request) returns (Response) {}
}
